<resources>
    <string name="app_name">BikeRent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MAIN ACTIVITY -->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- LOGIN ACTIVITY -->
    <string name="tv_login_username">Username</string>
    <string name="tv_login_password">Password</string>
    <string name="pd_login_msg">Sto eseguendo l\'accesso..</string>
    <string name="pd_login_failed">Login fallito..</string>
    <string name="pd_login_error">C\'è stato un errore nella connessione. Riprovare più tardi,</string>

    <!-- SLIDE_REGISTRATION ACTIVITY -->
    <string name="tv_reg_name">Nome</string>
    <string name="tv_reg_surname">Cognome</string>
    <string name="tv_reg_phone">Telefono</string>
    <string name="tv_reg_rules">Ho letto il regolamento</string>
    <string name="rb_reg_male">Uomo</string>
    <string name="rb_reg_female">Donna</string>
    <string name="bt_reg_submit">Registrati</string>
    <string name="tv_reg_already">Sei già registrato?</string>
</resources>
