<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fa6a6a">

    <LinearLayout
        android:id="@+id/regForm"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="visible" >

        <EditText
            android:id="@+id/etName"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/lblName"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_reg_name" />

        <EditText
            android:id="@+id/etSurname"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10" />

        <TextView
            android:id="@+id/lblSurname"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_reg_surname" />

        <EditText
            android:id="@+id/etNickname"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblNickname"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_login_username" />

        <com.xwray.passwordview.PasswordView
            android:id="@+id/et_password"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="pwd"/>

        <TextView
            android:id="@+id/lblPass"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_login_password" />

        <CheckBox android:id="@+id/CheckRegolamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/tv_reg_rules"
            android:onClick="showPopup"/>

        <EditText
            android:id="@+id/Phone"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="phone" />
        <TextView
            android:id="@+id/lblPhonr"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_reg_phone" />

        <RadioGroup
            android:id="@+id/radioGenere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Female"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_reg_female" />

            <RadioButton
                android:id="@+id/Male"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_reg_male" />
        </RadioGroup>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="register"
            android:text="@string/bt_reg_submit" />

        <TextView
            android:id="@+id/login_redir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_reg_already"
            android:onClick="loginRedir"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>